Added CSS, html links

--- a/index.html
+++ b/index.html
@@ -1,15 +1,80 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
     <meta charset="utf-8">
-    <!-- Compiled and minified CSS -->
+    <!-- min materialize -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
+    <!-- google typsnit -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
-    <!-- Compiled and minified JavaScript -->
-    <title>Galvanize Delivers</title>
+    <!-- mit eget css -->
+    <link href="./css/style.css" rel="stylesheet">
+     <title>Galvanize Delivers : tsarkisian g36</title>
 </head>
-<body>
 
+<body>
+<nav class="navbar blue darken-3">
+    <div class="nav-wrapper text-weight-300">
+        <a href="index.html" class="brand-logo">Galvanize Delivers</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a href="order.html">Order Delivery</a></li>
+        </ul>
+    </div>
+</nav>
+<div class="parallax-container valign-wrapper">
+    <div class="section no-pad-bot">
+        <div class="container center">
+            <h1 class="white-text text-weight-500">Fine Dining, Delivered.</h1>
+            <a href="order.html" class="waves-effect waves-light btn pink">Place an Order</a>
+        </div>
+    </div>
+    <div class="parallax"><img src="img/hero.jpg"></div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col s4">
+            <h4 class="pink-text"><i class="small material-icons">shopping_basket</i>
+                Shop Online</h4>
+            <p>Using our convenient web app, you'll get all the power of gFood without having to call your order in. Order in your pajamas, order 24 hours a day, order on Christmas, we're here to serve you.</p>
+        </div>
+        <div class="col s4">
+            <h4 class="pink-text"><i class="small material-icons">local_shipping</i>
+                Fast Delivery</h4>
+            <p>You've never seen ordering this quick. Our proprietary ordering rocket ship delivery team allows you to spend less time being hungry, and more time doing what matters most to you. We'd ask what that is, but gFood respects your privacy.</p>
+        </div>
+        <div class="col s4">
+            <h4 class="pink-text"><i class="small material-icons">local_atm</i>
+                Great Deals</h4>
+            <p>Money: You've got it, we want it. But let it never be said we're not incredibly fair! Burger sales? Check. Pizza sales? Check. Burger and pizza sales?? Check, check, check! We seriously can't stop making deals.</p>
+        </div>
+    </div>
+</div>
+<div class="row blue darken-4" style="margin-bottom: 0px;">
+    <div class="container">
+        <div class="row">
+            <div class="col s8">
+                <br>
+                <h5 class="white-text">Galvanize Delivers</h5>
+                <p class="white-text">Fine Dining, Delivered.</p>
+            </div>
+            <div class="col s2">
+                <br>
+                <br>
+                <h6><a class="white-text" href="index.html">Home</a></h6>
+                <h6><a class="white-text" href="order.html">Order Delivery</a></h6>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="footer-copyright indigo darken-4">
+    <div class="container white-text">
+        © 2016 Galvanize Delivers
+    </div>
+</div>
+<!-- jQuery och materialize JS bibliotek -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
+<script type="text/javascript" src="source.js"></script>
 </body>
+
 </html>
