--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="section no-pad-bot">
         <div class="container center">
             <h1 class="white-text text-weight-500">Fine Dining, Delivered.</h1>
-            <a href="order.html" class="waves-effect waves-light btn pink">Place an Order</a>
+            <a href="order.html" class="waves-effect waves-light btn-large pink">Place an Order</a>
         </div>
     </div>
     <div class="parallax"><img src="img/hero.jpg"></div>
@@ -67,14 +67,14 @@
     </div>
 </div>
 <div class="footer-copyright indigo darken-4">
-    <div class="container white-text">
+    <div id="sub_footer" class="container white-text">
         © 2016 Galvanize Delivers
     </div>
 </div>
 <!-- jQuery och materialize JS bibliotek -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
-<script type="text/javascript" src="source.js"></script>
+<script type="text/javascript" src="./js/order.js"></script>
 </body>
 
 </html>
